# feed

./: .gitignore  Cargo.toml  deploy.sh  feed.css  feed.html  sync.sh
src/: chat.rs  feed.hb  feed.hbs  feed.html  feed.rss  html.rs  html_string.rs  main.rs  matrix.rs  message.rs  signup.rs  test.rss
static/: button.html  chat.html  feed.html  signup.html
template/: chat.html  feed.html
