[package]
name = "matrix_static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-ws = "0.2.5"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
chrono = "0.4.23"
handlebars = "4.3.5"
js_int = "0.2.2"
matrix-sdk = "0.6.2"
rss = "2.0.1"
serde = "1.0.148"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

# Crypto
awc = "3.0.1"
hex = "0.4.3"
sha1 = "0.10.5"
hmac = "0.12.1"
serde_json = "1.0.91"
