[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-ws = "0.2.5"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
chrono = "0.4.23"
handlebars = "4.3.5"
include_dir = "0.7.3"
js_int = "0.2.2"
matrix-sdk = "0.6.2"
rss = "2.0.1"
serde = "1.0.148"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

# Crypto
awc = "3.0.1"
hex = "0.4.3"
sha1 = "0.10.5"
hmac = "0.12.1"
serde_json = "1.0.91"